updated ecovillage, security and sustainability pages

--- a/actions/ecovillage.html
+++ b/actions/ecovillage.html
@@ -43,8 +43,35 @@
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text"><div class="subheader-text">Eco-Village Life</div>
+<div class="body-text">
+<image src="../assets/images/SAMBiOtechie.png" style="float: left; height: 300px; width: 284px; margin-right: 20px; margin-bottom: 20px;">
+Dreaming: in winter I love the peace and stillness of the forest and being cosy at home with the wood stove burning, some nettle tea and plenty to read and lots of time to go slowly, regenerate and sleep.<br><br>
+Planning: in spring I love to be active in the garden getting everthing ready for the warmer weather and main growing season.<br><br>
+Doing: in summer I love hosting guests in my garden for tea, music and discussion. In quieter moments or for a nice siesta I enjoy lying in my DIY hammock (away from the laptop).
+(confession: sometimes with the laptop, but I gradually weened myself off down to about 2 hours per week of screen time!) and when it is just too hot: finding a few friends, jumping on the bicycle and going for a refreshing swim in one of the many nearby (beautiful) natural lakes.<br><br>
+Celebrating: In autumn comes the main harvest and with a bit of rain and bit of luck, I love getting lost in the woods on long afternoons hunting for mushrooms.
+<br><br>
+There is nothing quite like sitting with good friends in a beautiful wild garden sipping locally-grown/foraged herbal tea. I love foraging to make wild salads and growing my own herbs and vegetables. I have even had the pleasure and the privelege to looking after chickens, horses and a donkey. In a few words: Radical Self-Sustainability and Biophilia.
+<br>
+<br>
+It was an immersive, deep dive, into eco-village living becoming practical in everyday life in a forest. I learned about minimum interference management and other regenerative practices, autonomous DIY systems for heating, hot water, driking water, energy collection and upcycling / adaptation of resources from the city. We recycled absolutely everything. For example we have our own natural water recycling system, a wood and clay sauna, a clay pizza oven, clay rocket stoves, we harvest our own wood from our own managed forests for fuel and for building materials for our projects and our homes- many of which where built from recycled materials combined with natural, local, materials namely wood and clay. Permaculture was the norm and there was a lot of knowledge about the medicinal properties of plants, we even had our own communal apothecary. Very magical.
+<br>
+<br>
+Surrounded by a community which fostered camaraderie while celebrating individuality and diversity everyone was encouraged to try out their ideas for alternative living ranging from unique gardens to solar kitchens and from tipis to iron-age roundhouses and even a few small geodesic domes and cob houses. There were also seasonal social occasions such as communal harvesting of apples and potatoes and also regular full moon pizza parties. As well as being practical, many of the people living there were musically talented and there was a large hall for music and cultural events.
+<br>
+<br>
+I also learned about traditional wood working techniques and also so many improvised and appropriate solutions for everday practical problems. Of course we also used and maintained modern engineering solutions (wireless, networking, power distribution, a large solar installtion, various hot and cold water systems).
+
+The people living in the community had varying levels of experience and there was a good culture of sharing knowledge, tools and helping your neighbours (barn raising).
+<br>
+<br>
+Within the community there was a diverse range of perspectives and skills and we maintained our own infrastucture and learnt how to thrive in a natural setting, adapting to life in a forest. On a personal and a community level the key questions are: How can we live together- transcending the socialisation in institutions / wider society? How can we organise ourselves to lower our individual and collective impact on other people and on the planet? Which skills do we need to learn in order to sustainably meet our needs and to adapt to the challenges we face in the modern world?</div>
+
+With a bit of space and freedom we can all take a more wholistic approach to meeting our needs balancing self, other and nature and coming up with creative win-win-win synergies and strategies (no comprimises).
+<br>
+<br> These idyllic rural retreats have taught self-sufficiency without relying on state-run infrastructure through activities such as cutting wood for warmth or carrying water for daily needs—a unique perspective merging urban intellectual pursuits with serene natural environments. <br>
+</div>
         </div>
       </div>
 
