--- a/service/security.html
+++ b/service/security.html
@@ -25,19 +25,21 @@
     <div id="main-content">
       <!-- PROJECT HEADER -->
       <div id="project-header">
-<div class="subheader-text">Services Offered as a Security Engineer</div>
+<div class="main-title">Security Engineering</div>
 <div class="body-text">
 In the age where most devices have an IP address, Security Engineering in Hardware Design and Product Development is more critical than ever. It is important therefore to ensure robustness from the ground up.
 
-In today's interconnected world, safeguarding hardware design and product development is crucial to maintaining integrity across all aspects of your business. With our expertise in security engineering, we help you create secure products that protect sensitive information while adhering to industry standards.
+In today's interconnected world, safeguarding hardware design and product development is crucial to maintaining integrity across all aspects of your business. With our expertise in security engineering, we help you create secure products that protect sensitive information while adhering to industry standards.</div>
 
+<div class="subheader-text">Services Offered as a Security Engineer</div>
+<div class="body-text">
 Secure Hardware Design: collaborate with your team to develop robust hardware designs that incorporate built-in security features such as encryption modules, tamper detection mechanisms, and secure boot processes – effectively mitigating potential threats at the hardware level.<br><br>
 Supply Chain Protection: evaluate your supply chain for vulnerabilities and implement risk mitigation strategies; ensuring components remain untampered throughout the manufacturing process while minimizing exposure to counterfeit or compromised parts.<br><br>
 Firmware Security: review firmware code for potential vulnerabilities using static analysis tools; identify weaknesses within embedded software that could be exploited by malicious actors seeking unauthorized access or control over devices.<br><br>
 Compliance with Industry Standards: ensure all aspects of product design align with relevant industry standards (e.g., FIPS 140-2, ISO/IEC 15408) for enhanced credibility and customer trust; maintain compliance through regular audits or certifications where necessary.<br><br>
 End-to-end Encryption & Secure Communication Protocols: implement strong end-to-end encryption methods on data transmitted between devices preventing eavesdropping or interception further bolstering privacy protection during data transfers interactions within connected ecosystems.<br><br>
 Regular Hardware Security Audits & Updates: conduct periodic security audits on implemented solutions monitoring any emerging threats adjusting defense mechanisms accordingly provide ongoing support to ensure sustained levels of resilience against evolving cyber attacks and enhancing firmware by providing updates and patches to mitigate newly discovered vulnerabilities in order to maximize longevity of deployed systems.</div>
-        <div class="main-title">Cybersecurity Consultant / Security Engineering</div>
+        <div class="subheader-text">Security Engineering / Cybersecurity Consultant</div>
         <div class="body-text">Having secure hardware and systems is only a part of the puzzle, those systems also exist and are used in the world, by real people and on the public internet. Together we can create personalized security strategies, reliable network or hardware designs or custom-made employee training programs that reinforce your business against cyberattacks. Don't leave the safety of your digital domain to chance – let's collaborate, tell me about the needs of your organisation and I will provide exceptional service to bring you peace of mind and guide you towards a secure future!</div>
         <div id="project-details">
           <div class="subheader-text">Background</div>
@@ -47,7 +49,7 @@ Regular Hardware Security Audits & Updates: conduct periodic security audits on 
                 <image src="../assets/images/cryptopartylondon.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px;"> 
                 The Cryptoparty Movement has been empowering individuals around the world by teaching them how to use encryption tools and techniques that enhance privacy protection. As an active participant in this movement, I have witnessed firsthand its tremendous impact on raising awareness about data privacy and fostering a culture where people prioritize their online safety. <br>
                 
-                <br>
+                <br>           
                 Chaos Computer Club (CCC) As one of Europe's largest hacker organizations, CCC has played a crucial role in advocating for transparency, freedom of information, and personal privacy through various initiatives including conferences, workshops, publications and projects that address relevant issues within society. My experience with CCC has provided me with valuable insights into critical aspects of cybersecurity while exposing me to state-of-the-art methods employed by ethical hackers worldwide.
                 </div> 
 <div class="subheader-text">Services Offered as a Cybersecurity Expert/Consultant</div>
@@ -74,30 +76,34 @@ Security Risk Assessment: conduct comprehensive assessments on your company's di
             <div class="gallery-image-container half-width">
               <img src="../assets/images/tf_hw.jpg" class="gallery-image">
               <span class="image-caption">Full stack: Software. Hardware. Networking. Solar. Encrypted Data Sync over HF Radio. OTA Updates via UMTS / or LAN where available. Rugged. Ultra-remote deployment. Security principles applied throughout the design. Complex system design, integration, building and testing.</span>
-            </div>            
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/ccc_camp.jpg" class="gallery-image">
+              <span class="image-caption">CCC Summer Camp</span>
+            </div>                        
             <div class="gallery-image-container half-width">
               <img src="../assets/images/occupy_boi.jpg" class="gallery-image">
-              <span class="image-caption">Bank of Ideas, OccupyLSX NOC</span>
+              <span class="image-caption">OccupyLSX NOC, Bank of Ideas</span>
             </div>                        
             <div class="gallery-image-container half-width">
               <img src="../assets/images/hacker_bbq.jpg" class="gallery-image">
-              <span class="image-caption">Hacker BBQ. Macs are useful!</span>
+              <span class="image-caption">Hacker BBQ. Macs *are* useful after all!</span>
             </div>            
             <div class="gallery-image-container half-width">
               <img src="../assets/images/occupy_1.jpg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">OccupyLSX Tech</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/occupy_8.jpg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">OccupyLSX Tech, first days</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/occupy_4.jpg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">OccupyLSX Tech, some friends from the internet are here</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/occupy_6.jpg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">OccupyLSX Tech, St Pauls</span>
             </div>            
           </div>
         </div>
