--- a/service/sustainability.html
+++ b/service/sustainability.html
@@ -1,93 +1,94 @@
-
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-
-     <link rel="icon" href="assets/icons/favicon.ico" />
-     <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
+  <head>
+    <meta charset="utf-8">
+    <link rel="icon" href="assets/icons/favicon.ico" />
+    <title>Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</title>
     <meta name="description" content="A portfolio of the projects I have worked on and their impact, the services I provide, the skills that I have and some of my writings.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-		<link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/typography.css">
     <link rel="stylesheet" href="../css/utilities.css">
-
-		<script defer src="../js/script.js"></script>
-	</head>
-	<body>
+    <script defer src="../js/script.js"></script>
+  </head>
+  <body>
     <!-- NAVBAR -->
     <div class="navbar">
       <a class="nav-title-link" href="../index.html">
-
         <span class="nav-title">Samuel Carlisle BEng (hons) Dunelm MIET: Portfolio</span>
-
         <a class="button" href="mailto:samuelcarlisle@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
     </div>
-
     <!-- MAIN PAGE CONTENT -->
     <div id="main-content">
-
       <!-- PROJECT HEADER -->
       <div id="project-header">
-
-        <div class="main-title">Sustainability Research</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <div class="main-title">Green Engineering / Sustainability Consulting</div>
+        <div class="body-text">
+<image src="../assets/images/eco_garden.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;">
+Let's put aside the empty gestures of greenwashing and superficial corporate social responsibility, leaving them to decompose with the rest of the 💩 on the compost heap. With my love of nature combined with my engineering expertise, I express my preference for resilience and sustainability in both system design and also in my personal life, I can confidently guide businesses and individuals genuinely committed to enhancing their resilience and sustainable practice with integrity. Sustainability and resilience, for example permaculture, are really about praxis not theory alone- I recognise that everybody is on their own personal journey to become aware of the importance of these themes in the way that they live and what they do in order to have what they need and each one has a unique situation and perspective.
+<br><br>
+<image src="../assets/images/thinkfarm.jpg" style="float: left; height: 300px; width: 400px; margin-right: 20px; margin-bottom: 20px;">
+I am committed to sharing knowledge about alternatives and using the time of my life to further open source software and hardware projects that put the necessary technical and engineering knowledge into the public domain so that we can all, globally, collaborate and also have dignity in access to our basic needs whilst minimising our impact on each other and on the planet. There are groundbreaking initiatives like the Open Source Ecology project that could really benefit from talented engineers from taking time from their busy schedules to collaborate together for the good of all.
+<br><br>
+<image src="../assets/images/ose_backhoe.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;"> 
+We can also learn alot from advanced governance and management structures like Sociocracy and Holocracy. I have seen them working to great effect over the course of 2 years. The outcome: it was one of the most enlightened and pleasant office environments that I have ever worked in. I regularly participated in the Plenum group process as well as learning facillitation, group collaboration and discussion techniques from real experts. A really intentional and wonderful self-run co-working space (Thinkfarm in Berlin). The space was focused broadly on shaping societal change for a more socially just, ecologically sustainable, future together. There were so many absolutely fantastic projects and people there.
+<br><br>
+As a Sustainability Consultant I can offer service grounded in extensive practical experience, provide invaluable insight and assistance to implement systems and practices tailored specifically to meet your needs. Drawing from my experience across different settings from London to Berlin and from Brandenburg to USA I can assure my clients receive the very best information and support for integrating these solutions into their lives and businesses.
+<br><br>
+<image src="../assets/images/eco_water.jpg" style="float: left; height: 300px; width: 400px; margin-right: 20px; margin-bottom: 20px;"> 
+My journey really began with an eco-engineering course where I learned what it would take for the average family in the UK (in terms of lifestyle choices and engineering systems) to live more sustainably. Participating in that course deepened my understanding and appreciation of environmentally-conscious design principles within the context of engineering not to mention the importance of installing an maintaining your own infrastructure. This very early influence on my engineering education has enabled me to critically reflect on the impacts that modern lifestyles have on the environment and also to explore creative ways of incorporating sustainability into aspects of my engineering work throughout my career and also in my life. Recognizing that technological advancements go hand-in-hand with societal development and taking care to see the whole picture and not ignoring the so-called 'externalities': we all share the same biosphere, the same planet. I aim to get the balance right between the problem to be solved be it with appropriate technology or the 'cutting-edge' and also critically reflect and practise 'enough' to just do what is needed: roots not branches. It does pose a serious challenge: how hardcore is our DIY?
+<br><br>
+<image src="../assets/images/y3d.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;"> 
+I then studied electronic engineering at university. After graduation I worked 'in industry' in London in the cleantech / green engineering sector at innovative companies such as Moixa (London, UK) where I focused on industrial data collection and energy-saving and with Nanode (London, UK) focusing on a self-built, low-power, microcontroller for environmental sensing and data collection. Around the same time I also had a close connection with the OpenEnergyMonitor team through the community around the Nanode project. In the following years I further broadened my engineering experience moving from firmware, software and electronics to mechanical design and CnC fabrication systems through collaboration and parcipation with the Reprap Project (Bath, UK) and the Open Source Ecology project (Maysville, USA). After leaving London for Berlin I continued to pursue my interest in CnC machines, specifically 3D printing Youin3D (Mitte, Berlin).
+<br><br>
+<image src="../assets/images/animachine_alexa.jpg" style="float: right; height: 400px; width: 300px; margin-left: 20px; margin-bottom: 20px;">
+Merging these experiences with a conscious detachment from consumerism and exploitation prepared me for embracing voluntary minimalism over five years—discovering the joy in the art/praxis of simple and sustainable living within an eco-village situated in a large forest.
+For those who share a love for sustainability and alternative solutions and culture, lets work together and I can offer practical assistance rooted in authentic knowledge—a guiding compass towards creating lasting positive change. For a start lets have some foraged nettle and birch leaf tea together and talk about your project.</div>
       </div>
-
-
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
-          <div class="body-text">Participating in an Eco-Engineering Course deepened my understanding of environmentally conscious principles within the context of engineering. This valuable foundation enables me to explore creative ways of incorporating sustainability into various engineering aspects while considering overall environmental impacts. Recognizing that technological advancements go hand-in-hand with societal development, I aim to strike a balance between enhancing engineering prowess and fostering positive social change through sustainable strategies.
-As a dedicated Sustainability Consultant with a strong background in green engineering, my journey began with an eco-engineering course, followed by an electronic engineering degree. Subsequently, I gained practical experience working in the industry before visiting Open Source Ecology and later participating in transformative projects at Thinkfarm Berlin. The culmination of these experiences prepared me for living and learning within an eco-village.
-<br><br>
-My diverse range of experiences embraces urban and rural landscapes' essence, blending theoretical knowledge with practical wisdom inspired by aesthetics evoking nature-human endeavor harmony. In bustling cities like London, Berlin, and the USA, I gained valuable insights from progressive organizations and formal educational settings. Through hands-on collaborations at innovative organizations like Open Source Ecology and inspiring communal spaces like Thinkfarm Berlin alongside immersive eco-village living experiences allowed me to explore novel approaches for sustainable living while connecting deeply with nature's simplicity.
-<br><br>
-These idyllic rural retreats have taught self-sufficiency without relying on state-run infrastructure through activities such as cutting wood for warmth or carrying water for daily needs—a unique perspective merging urban intellectual pursuits with serene natural environments.
-<br><br>
-I am committed to combining advanced technologies with ecological responsibility—such as involvement in groundbreaking initiatives like Open Source Ecology Project—and collaborative experiences at self-run co-working spaces focused on sociocracy/holacracy principles like Thinkfarm Berlin; shaping societal change toward a more socially just ecologically sustainable future together.
-<br><br>
-During five years spent engaging hands-on in eco-village living practices—including sustainable forestry management/regenerative practices/voluntary minimalism/extensive recycling initiatives—I experienced running our water system, harvesting wood from managed forests and building homes using natural materials like wood and clay. Surrounded by a supportive community fostering camaraderie while celebrating efforts together through activities such as full moon pizza parties or creating music as a collective.
-<br><br>
-As a Sustainability Consultant offering comprehensive services grounded in extensive practical experiences, I provide invaluable insight into implementing greener practices tailored specifically to meet each client's unique needs! Drawing from my experience across different settings—London to Berlin to the USA along with immersive eco-village living—I assure clients will receive high-quality advice integrating greener practices into their endeavors for impactful changes across industries.
+          <div class="body-text">
+<image src="../assets/images/eco_solar_pump.jpg" style="float: left; height: 300px; width: 400px; margin-right: 20px; margin-bottom: 20px;">
+My diverse range of experience embraces not only the urban but the rural, blending cutting edge theoretical knowledge from academia, industry and the pleathora of ideas available on the internet with practical wisdom: trust but verify, learning by doing, seeing what actually works in practise. Having lived in a city for most of my early life I was, at that time, overweight, suffered from allergies and had asthma and constantly over-stimulated but somehow under-nourished, there was something missing. 30 years later, after having recently left the eco village I no longer have any of those imbalances, my biomes had finally healed. My simple advice therefore would be to take time in your life to destimulate and for forest bathing and going slowly and connecting with nature. Also I would highly encourage anyone to learn how to safely forage and to grow their own food. As I slowly realised, over the course of my life, that nature was a bigger computer with its own 'internet of mycellium' interfacing with the roots of the plants, I had a new complex system to learn. Plants are, in fact, the self-replicators that Von Neumann had always dreamed of. The magic of trees and also of smaller plants: absorbing the ions they need from the soil and fixing carbon from the air and synergistically sharing excess carbon through their roots and the mycellial network... *and* you can even eat some of them *and* they have different nutritional profiles and some even have healing properties! Let thy food by thy medicine and thy medicine by thy food, there was no going back, I fell in love and became totally fascinated.
 </div>
+<div class="body-text">
+<image src="../assets/images/ironage.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;"> 
+In contrast to the silence of a forest and the complex and rich beauty of nature, as I have previously mentioned I was born in a city. I can say that living and working in bustling cultural captials like London (UK), Berlin (Germany) and New York (USA) I have gained very valuable insights and connections from working with progressive individuals and organizations but these places also suffer from a glaring contradiction: we all want to live better lives that reflect our values but we are also constrained by the material dimensions of life and the fact of the built environment dictating largely what is permissable, and also therefore what is not possible there. Clearly there are some approaches to increasing sustainability which make sense in cities which are in point of fact 'degraded habitats' / clearings in the forest and some approaches which are better suited to more rural settings where there are still living eco-systems and living soil.
+<br><br>
+<image src="../assets/images/ose_cob.jpg" style="float: left; height: 300px; width: 400px; margin-right: 20px; margin-bottom: 20px;"> 
+In conclusion, outside of the traditional engineering industry I have used my technical skills and collaborated with my network for radical actions such as in New York, Occupy May (Communications) in 2012 and Hurricane Hackers (facillitating mass collaboration and co-ordinating disaster relief in the aftermath of Hurricane Sandy) in 2012 and engineering design contributions through collaborations at innovative organizations like Open Source Ecology (Working on their 3D printers, Backhoe and the CnC Torch Table) in 2013. I have also delivered complex projects like a solar-powered communications and medical records system which has greatly improved access to healthcare for a very large population of people living in an extremely remote region around lake Tanganyika. After delivery of that project I continued to work in the Thinkfarm in Berlin (since it was such a fantastic environment) alongside many other excellent people and projects that were actively engaged in social, ecological and transition. There I was able to develop my network and conduct further research and exploration into alternative governance structures, ecology, appropriate technology and alternative solutions over the course of 2 years and finally testing things out as a daily living practice over the course of 5 years living in an eco-village.
+</div>
+          </div>
         </div>
       </div>
-
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
-
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
-            <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
-            </div>
+          <div class="gallery-image-container half-width">
+            <img src="../assets/images/code.jpeg" class="gallery-image">
+            <span class="image-caption">Give your image a caption. People love context.</span>
+          </div>
+          <div class="gallery-image-container half-width">
+            <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
+            <span class="image-caption">Give your image a caption. People love context.</span>
+          </div>
+          <div class="gallery-image-container">
+            <img src="../assets/images/camera.jpeg" class="gallery-image">
+            <span class="image-caption">Give your image a caption. People love context.</span>
+          </div>
         </div>
       </div>
     </div>
-
     <!-- FOOTER -->
     <div id="footer">
-
       <a class="icon-link" href="mailto:samuelcarlisle@gmail.com">
-        <image src="../assets/icons/mail.svg" class="footer-icon"/>
+        <image src="../assets/icons/mail.svg" class="footer-icon" />
       </a>
     </div>
-
-	</body>
+  </body>
 </html>
